@@ -4,3 +4,4 @@ sphinx
 sphinx_rtd_theme
 sphinxcontrib-seqdiag
 dbus-next
+pulsectl-asyncio
